# Giga-Pilot

./: .gitignore  README.md
backend/: celery_app.py  main.py  pyproject.toml
backend/api/routes/: auth.py  file_upload.py  ingest.py  qa.py  slack.py
backend/core/: config.py  lifespan.py
backend/database/postgre/: crud.py  engine.py  session.py
backend/models/: __init__.py
backend/models/postgre/: chat.py  file.py  query_log.py  request_log.py  user.py  vector.py
backend/schemas/: auth.py  file.py  ingest.py  qa.py
backend/services/agent/: llm.py
backend/services/auth/: auth.py
backend/services/embedding/: embedding.py  generate_embedding.py
backend/services/file/: file_uploader.py  parse.py  upload.py
backend/services/file_service/: file_parser.py  file_uploader.py
backend/services/ingest/: ochestrator.py  tasks.py
backend/services/ingestion/: ochestrator.py  store_vectors.py
backend/services/retrival/: llm_generation.py  ochestrator.py
docs/: Architecture.md  client-brief.md
frontend/: pnpm-lock.yaml
