[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

exclude-newer = "7 days"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "google-genai>=2.10.0",
    "pydantic>=2.13.4",
    "slack>=0.0.2",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
]
