[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

exclude-newer = "7 days"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "docling>=2.108.0",
    "fastapi[standard]>=0.138.2",
    "google-genai>=2.10.0",
    "itsdangerous>=2.2.0",
    "pgvector>=0.4.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "slack>=0.0.2",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
]
