[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

exclude-newer = "7 days"
dependencies = [
    "aiohttp>=3.14.1",
    "aiopg>=1.4.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "docling>=2.108.0",
    "fastapi[standard]>=0.138.2",
    "google-genai>=2.10.0",
    "itsdangerous>=2.2.0",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.5.0",
    "pydantic-ai-slim[groq]>=2.5.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "slack>=0.0.2",
    "slack-bolt>=1.29.0",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
